--- a/blog.html
+++ b/blog.html
@@ -31,11 +31,11 @@
         <div class="nav-links" id="navLinks">
           <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="HOME">HOME</a></li>
-            <li><a href="ABOUT">ABOUT</a></li>
-            <li><a href="COURSE">COURSE</a></li>
-            <li><a href="BLOG">BLOG</a></li>
-            <li><a href="CONTACT">CONTACT</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="course.html">COURSE</a></li>
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
         <i class="fa-solid fa-bars" onclick="showMenu()"></i>
